--- a/tools/DebuggerVisualizer/HeuristicLab.DebuggerVisualizers/HeuristicLab.DebuggerVisualizers.csproj
+++ b/tools/DebuggerVisualizer/HeuristicLab.DebuggerVisualizers/HeuristicLab.DebuggerVisualizers.csproj
@@ -101,6 +101,7 @@
     <PostBuildEvent>set Path=%25Path%25;$(ProjectDir);$(SolutionDir)
 
 xcopy "$(SolutionDir)$(ProjectName)\$(OutDir)$(TargetFileName)" "$(USERPROFILE)\Documents\Visual Studio 2010\Visualizers" /y
+xcopy "$(SolutionDir)$(ProjectName)\$(OutDir)HeuristicLab.Encodings.SymbolicExpressionTreeEncoding-3.4.dll" "$(USERPROFILE)\Documents\Visual Studio 2010\Visualizers" /y
 xcopy "$(SolutionDir)$(ProjectName)\$(OutDir)HeuristicLab.Encodings.SymbolicExpressionTreeEncoding.Views-3.4.dll" "$(USERPROFILE)\Documents\Visual Studio 2010\Visualizers" /y</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
