#1545 added threadsafe log
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6424 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
+++ b/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Interfaces\IOperator.cs" />
     <Compile Include="HeuristicLabCorePlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThreadSafeLog.cs" />
     <Compile Include="Variable.cs" />
   </ItemGroup>
   <ItemGroup>
