#1553: implemented unit test to create and run the symbolic classification sample (mammographic masses)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6440 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab/3.3/Tests/HeuristicLab-3.3.Tests.csproj
+++ b/sources/HeuristicLab/3.3/Tests/HeuristicLab-3.3.Tests.csproj
@@ -555,6 +555,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="mammographic_masses.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="towerData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
