--- a/sources/HeuristicLab/3.3/Tests/HeuristicLab-3.3.Tests.csproj
+++ b/sources/HeuristicLab/3.3/Tests/HeuristicLab-3.3.Tests.csproj
@@ -125,7 +125,7 @@
     <Compile Include="CloningConstructorTest.cs" />
     <Compile Include="CollectObjectGraphTest.cs" />
     <Compile Include="ContentViewTests.cs" />
-    <Compile Include="GeneticProgrammingSamplesTest.cs" />
+    <Compile Include="GeneticAlgorithmSamplesTest.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -553,12 +553,16 @@
     <None Include="GA_TSP.hl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Resources\ch130.opt.tour" />
+    <None Include="Resources\ch130.tsp" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="mammographic_masses.txt">
+    <Content Include="Resources\C101.opt.txt" />
+    <Content Include="Resources\C101.txt" />
+    <Content Include="Resources\mammographic_masses.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="towerData.txt">
+    <Content Include="Resources\towerData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
