Corrected namespace of test project (#1537)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk/sources@6535 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/HeuristicLab.PluginInfrastructure/3.3/Tests/HeuristicLab.PluginInfrastructure-3.3.Tests.csproj
+++ b/HeuristicLab.PluginInfrastructure/3.3/Tests/HeuristicLab.PluginInfrastructure-3.3.Tests.csproj
@@ -9,7 +9,7 @@
     <ProjectGuid>{04840E7E-F7DB-4CE4-B308-EE805DD94E73}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HeuristicLab.PluginInfrastructure_3._3.Test</RootNamespace>
+    <RootNamespace>HeuristicLab.PluginInfrastructure_33.Tests</RootNamespace>
     <AssemblyName>HeuristicLab.PluginInfrastructure-3.3.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
