#1581: created a unit test for SVM performance
git-svn-id: https://src.heuristiclab.com/svn/core/trunk/sources@6553 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/HeuristicLab/3.3/Tests/HeuristicLab-3.3.Tests.csproj
+++ b/HeuristicLab/3.3/Tests/HeuristicLab-3.3.Tests.csproj
@@ -125,6 +125,7 @@
     <Compile Include="CloningConstructorTest.cs" />
     <Compile Include="CollectObjectGraphTest.cs" />
     <Compile Include="ContentViewTests.cs" />
+    <Compile Include="SupportVectorMachineTest.cs" />
     <Compile Include="ThreadSafeLogTest.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
