Adapted colorize button for x-axis in `RunCollectionBubbleChartView` and changed names of experiments and batch runs which are created using the `CreateExperimentDialog` (#1529)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk/sources@6558 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/HeuristicLab.Common.Resources/3.3/HeuristicLab.Common.Resources-3.3.csproj
+++ b/HeuristicLab.Common.Resources/3.3/HeuristicLab.Common.Resources-3.3.csproj
@@ -430,6 +430,7 @@
   <ItemGroup>
     <Content Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Actions_Checkout.png" />
     <Content Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Actions_Clone.png" />
+    <None Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Actions_DisplayInColor_Vertical.png" />
     <Content Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Objects_BatchRun_Paused.png" />
     <Content Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Objects_BatchRun_Prepared.png" />
     <Content Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Objects_BatchRun_Started.png" />
