#1475: added first implementation of wrapper classes for the ALGLIB implementation of multinomial logit classification.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6567 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.DataAnalysis/3.4/HeuristicLab.Algorithms.DataAnalysis-3.4.csproj
+++ b/sources/HeuristicLab.Algorithms.DataAnalysis/3.4/HeuristicLab.Algorithms.DataAnalysis-3.4.csproj
@@ -128,6 +128,9 @@
     <Compile Include="Linear\LinearRegression.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Linear\LogitClassificationSolution.cs" />
+    <Compile Include="Linear\LogitModel.cs" />
+    <Compile Include="Linear\MultinomialLogitClassification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomForest\RandomForestClassificationSolution.cs" />
     <Compile Include="RandomForest\RandomForestClassification.cs" />
