#763 added first implementation of classification and regression based on k nearest neighbour.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6583 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.DataAnalysis/3.4/HeuristicLab.Algorithms.DataAnalysis-3.4.csproj
+++ b/sources/HeuristicLab.Algorithms.DataAnalysis/3.4/HeuristicLab.Algorithms.DataAnalysis-3.4.csproj
@@ -111,6 +111,9 @@
     </Compile>
     <Compile Include="HeuristicLabAlgorithmsDataAnalysisPlugin.cs" />
     <Compile Include="FixedDataAnalysisAlgorithm.cs" />
+    <Compile Include="Interfaces\INearestNeighbourClassificationSolution.cs" />
+    <Compile Include="Interfaces\INearestNeighbourRegressionSolution.cs" />
+    <Compile Include="Interfaces\INearestNeighbourModel.cs" />
     <Compile Include="Interfaces\INeuralNetworkEnsembleClassificationSolution.cs" />
     <Compile Include="Interfaces\INeuralNetworkEnsembleRegressionSolution.cs" />
     <Compile Include="Interfaces\INeuralNetworkEnsembleModel.cs" />
@@ -137,6 +140,11 @@
     <Compile Include="Linear\MultinomialLogitClassification.cs" />
     <Compile Include="Linear\MultinomialLogitClassificationSolution.cs" />
     <Compile Include="Linear\MultinomialLogitModel.cs" />
+    <Compile Include="NearestNeighbour\NearestNeighbourClassification.cs" />
+    <Compile Include="NearestNeighbour\NearestNeighbourClassificationSolution.cs" />
+    <Compile Include="NearestNeighbour\NearestNeighbourModel.cs" />
+    <Compile Include="NearestNeighbour\NearestNeighbourRegression.cs" />
+    <Compile Include="NearestNeighbour\NearestNeighbourRegressionSolution.cs" />
     <Compile Include="NeuralNetwork\NeuralNetworkEnsembleClassification.cs" />
     <Compile Include="NeuralNetwork\NeuralNetworkEnsembleClassificationSolution.cs" />
     <Compile Include="NeuralNetwork\NeuralNetworkEnsembleModel.cs" />
