#1600:  * Corrected result descriptions in `DataAnalysisSolution`.  * Added NMSE results in `IRegressionSolution`.  * Split `RegressionSolution` into a concrete implementation class and an abstract base class `RegressionSolutionBase` that could also be used for `RegressionEnsembleSolutions` or `CachingRegressionSolutions`.  * Moved calculation of results in specific regression solution implementations (e.g. `SymbolicRegressionSolution`).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6588 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.DataAnalysis/3.4/HeuristicLab.Problems.DataAnalysis-3.4.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis/3.4/HeuristicLab.Problems.DataAnalysis-3.4.csproj
@@ -135,6 +135,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Interfaces\Regression\IRegressionEnsembleSolution.cs" />
+    <Compile Include="Implementation\Regression\RegressionSolutionBase.cs" />
     <Compile Include="OnlineCalculators\OnlineLinearScalingParameterCalculator.cs" />
     <Compile Include="Implementation\Classification\DiscriminantFunctionClassificationModel.cs" />
     <Compile Include="Implementation\Classification\DiscriminantFunctionClassificationSolution.cs" />
